--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="sample_team">0000</string>
+    <string name="banner_ad_unit_id">ca-app-pub-9342941618723647/5724992036</string>
+    <string name="nexus_5_test_id">467B40B4730D0C3A11B13A410B8E7EFC</string>
+    <string name="moto_g_test_id">DF6094713C3BDC6831BF580ADC637369</string>
 </resources>
