Polishing for release 0.1.0

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="team_number_prompt">Please enter your team number</string>
     <string name="event_prompt">Please select your event</string>
     <string name="year_prompt">Please select the desired year</string>
+    <string name="general_summary">General</string>
+    <string name="general_title">General</string>
     <string-array name="year_array">
         <item>2015</item>
         <item>2016</item>
