--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,14 @@
         <item>2015</item>
         <item>2016</item>
     </string-array>
+    <string-array name="theme_values">
+        <item>light</item>
+        <item>dark</item>
+        <item>amoled</item>
+    </string-array>
+    <string-array name="theme">
+        <item>Light Theme</item>
+        <item>Dark Theme</item>
+        <item>AMOLED Theme</item>
+    </string-array>
 </resources>
