--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="year_prompt">Please select the desired year</string>
     <string name="general_summary">General</string>
     <string name="general_title">General</string>
+    <string name="refresh_icon">Refresh</string>
     <string-array name="year_array">
         <item>2016</item>
         <item>2015</item>
