--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="version_text">Version &appversion;</string>
     <string name="no_data">No Data</string>
     <string-array name="year_array">
+        <item>2017</item>
         <item>2016</item>
         <item>2015</item>
     </string-array>
