--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="version">&appversion;</string>
     <string name="version_text">Version &appversion;</string>
     <string name="no_data">No Data</string>
+    <string name="no_connection_message">No Connection. Loading from last refresh</string>
     <string-array name="year_array">
         <item>2017</item>
         <item>2016</item>
