Added error messages when FIRST server is down resolves #2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,9 @@
     <string name="version">&appversion;</string>
     <string name="version_text">Version &appversion;</string>
     <string name="no_data">No Data</string>
-    <string name="no_connection_message">No Connection. Loading from last refresh</string>
+    <string name="no_connection_message">No Connection. Loading from last refresh.</string>
+    <string name="first_server_down">The FIRST server is currently offline.</string>
+    <string name="event_server_down">The feed for the event is down.</string>
     <string-array name="year_array">
         <item>2017</item>
         <item>2016</item>
