--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="first_server_down">The FIRST server is currently offline.</string>
     <string name="event_server_down">The feed for the event is down.</string>
     <string-array name="year_array">
+        <item>2018</item>
         <item>2017</item>
         <item>2016</item>
         <item>2015</item>
