--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
 <resources>
     <string name="app_name">FRC Manager</string>
     <string name="action_settings">Settings</string>
+    <string name="action_directions">Get Directions</string>
     <string name="sample_team">0000</string>
     <string name="event_slide">S</string>
     <string name="welcome_slide_text">Welcome to FRC Manager</string>
